# quiz4_repo

./: CMakeLists.txt  ackerman.cpp  ackerman.h  controller.cpp  controller.h  laser.cpp  laser.h  logger.cpp  main.cpp  mission.cpp  mission.h  ranger.cpp  ranger.h  skidsteer.cpp  skidsteer.h  sonar.cpp  sonar.h
a/: CMakeLists.txt  controller.cpp  controller.h  controllerinterface.h  laserprocessing.cpp  laserprocessing.h  skidsteer.cpp  skidsteer.h
a/test/: CMakeLists.txt  utest.cpp
include/: audi.h  cell.h  pfms_types.h  pfmsconnector.h  pfmshog.h
quiz5/: CMakeLists.txt  README.md  package.xml
quiz5/rviz/: quiz5.rviz
quiz5/src/: detection_node.cpp  detection_node.h  laserprocessing.cpp  laserprocessing.h  main.cpp
quiz5/test/: utest.cpp
relevant_material/: command_ackerman.cpp  command_skidsteer.cpp  move_items.cpp  receive_laser.cpp  receive_sonar.cpp
